--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,52 +1,46 @@
-# GitHub Action for generating a contribution graph with a snake eating your contributions.
 name: Generate Snake
 
-# Controls when the action will run.
 on:
   schedule:
-      # every 12 hours
     - cron: "0 */12 * * *"
-
-  # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
-  
-  # Also run on every push on the master branch
   push:
     branches:
-    - main
+      - main
 
-# The sequence of runs in this workflow:
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Clone repo
-        uses: actions/checkout@v3
-    
-      - name: Generate the snake files in './dist/'
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Generate snake files (light and dark)
         uses: Platane/snk@v3
-        id: snake-gif
+        id: snake
         with:
           github_user_name: ${{ github.repository_owner }}
+          # Light: black snake + pink heatmap (appears on white in light mode)
+          # Dark: white snake + pink heatmap + github-dark palette (dark background look)
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-contribution-grid-snake.gif?color_snake=black&color_dots=#f8d7da,#f1b0b7,#e83e8c,#d63384,#b02a5b
+            dist/github-contribution-grid-snake.svg?color_snake=pink&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=white&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
+            dist/github-contribution-grid-snake.gif?color_snake=pink&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
+
         env:
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Show build status
         run: git status
 
-      - name: Push new files to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - name: Publish to output branch
+        uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
           build_dir: dist
-          commit_message: Update snake animations
+          commit_message: Update snake animations (light/dark)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
