--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    
+
     steps:
-      - name: Clone repo
+      - name: Checkout
         uses: actions/checkout@v4
-    
-      - name: Generate the snake files in './dist/'
+
+      - name: Generate snake files (light and dark)
         uses: Platane/snk@v3
         id: snake
         with:
@@ -26,17 +26,16 @@ jobs:
           # Light: black snake + pink heatmap (appears on white in light mode)
           # Dark: white snake + pink heatmap + github-dark palette (dark background look)
           outputs: |
-            dist/github-contribution-grid-snake.svg?color_snake=pink&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
+            dist/github-contribution-grid-snake.svg?color_snake=black&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=white&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
-            dist/github-contribution-grid-snake.gif?color_snake=pink&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
-
+            dist/github-contribution-grid-snake.gif?color_snake=black&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Show build status
         run: git status
 
-      - name: Push new files to the output branch
+      - name: Publish to output branch
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
