--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,10 @@ jobs:
         id: snake
         with:
           github_user_name: ${{ github.repository_owner }}
-          # Light: black snake + pink heatmap (appears on white in light mode)
-          # Dark: white snake + pink heatmap + github-dark palette (dark background look)
           outputs: |
-            dist/github-contribution-grid-snake.svg?color_snake=black&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=white&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
-            dist/github-contribution-grid-snake.gif?color_snake=black&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
+            dist/github-contribution-grid-snake.svg?color_snake=#000000&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#000000&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
+            dist/github-contribution-grid-snake.gif?color_snake=#000000&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
