--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,12 @@ jobs:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             # dist/github-contribution-grid-snake.svg?color_snake=#000000&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
-            dist/github-contribution-grid-snake.svg?color_snake=#00FFFF&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#000000&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
-            dist/github-contribution-grid-snake.gif?color_snake=#000000&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
+            # dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#000000&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
+            # dist/github-contribution-grid-snake.gif?color_snake=#000000&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
+
+            dist/github-contribution-grid-snake.svg?color_snake=#00FFFF&color_dots=#d3d3d3,#fbc4d8,#f48fb1,#ec407a,#ad1457
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#00FFFF&color_dots=#d3d3d3,#fbc4d8,#f48fb1,#ec407a,#ad1457
+            dist/github-contribution-grid-snake.gif?color_snake=#00FFFF&color_dots=#d3d3d3,#fbc4d8,#f48fb1,#ec407a,#ad1457
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
