--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,20 @@ jobs:
             # dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#000000&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
             # dist/github-contribution-grid-snake.gif?color_snake=#000000&color_dots=#fde2e4,#fbc4d8,#f48fb1,#ec407a,#ad1457
 
-            dist/github-contribution-grid-snake.svg?color_snake=#00FFFF&color_dots=#d3d3d3,#fbc4d8,#f48fb1,#ec407a,#ad1457
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#00FFFF&color_dots=#d3d3d3,#fbc4d8,#f48fb1,#ec407a,#ad1457
-            dist/github-contribution-grid-snake.gif?color_snake=#00FFFF&color_dots=#d3d3d3,#fbc4d8,#f48fb1,#ec407a,#ad1457
+            # dist/github-contribution-grid-snake.svg?color_snake=#00FFFF&color_dots=#d3d3d3,#fbc4d8,#f48fb1,#ec407a,#ad1457
+            # dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#00FFFF&color_dots=#d3d3d3,#fbc4d8,#f48fb1,#ec407a,#ad1457
+            # dist/github-contribution-grid-snake.gif?color_snake=#00FFFF&color_dots=#d3d3d3,#fbc4d8,#f48fb1,#ec407a,#ad1457
+
+            # LIGHT MODE: gray empty, pinks (darker = more), snake black
+            dist/github-contribution-grid-snake.svg?color_snake=#000000&color_dots=#d3d3d3,#fbc4d8,#f48fb1,#ec407a,#ad1457
+
+            # DARK MODE: black empty, pinks reversed (lighter = more), snake neon blue
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#00FFFF&color_dots=#000000,#ad1457,#ec407a,#f48fb1,#fbc4d8
+
+            # Optional GIF: pick one theme (here, light palette with black snake)
+            dist/github-contribution-grid-snake.gif?color_snake=#000000&color_dots=#d3d3d3,#fbc4d8,#f48fb1,#ec407a,#ad1457
+
+            
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
